roles/base/files/iptables/iptables.rules
# Generated by iptables-save v1.4.21 on Tue Feb 23 15:58:32 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [108:13513]
:LOG_REJECT - [0:0]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
-A LOG_REJECT -m limit --limit 5/min --limit-burst 10 -j LOG --log-prefix "iptables reject: " --log-level 7
-A LOG_REJECT -j REJECT --reject-with icmp-port-unreachable
-A TCP -p tcp -m tcp --dport 53 -j ACCEPT
-A TCP -p tcp -m tcp --dport 80 -j ACCEPT
-A TCP -p tcp -m tcp --dport 443 -j ACCEPT
-A TCP -p tcp -m tcp --dport 22 -m state --state NEW -m recent --set --name DEFAULT --mask 255.255.255.255 --rsource
-A TCP -p tcp -m tcp --dport 22 -m state --state NEW -m recent --update --seconds 90 --hitcount 4 --name DEFAULT --mask 255.255.255.255 --rsource -j LOG_REJECT
-A TCP -p tcp -m tcp --dport 22 -j ACCEPT
-A TCP -p tcp -m tcp --dport 25 -j ACCEPT
-A TCP -p tcp -m tcp --dport 993 -j ACCEPT
-A TCP -p tcp -m tcp --dport 587 -j ACCEPT
-A TCP -p tcp -j REJECT --reject-with tcp-reset
-A UDP -p udp -m udp --dport 53 -j ACCEPT
-A UDP -p udp -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Tue Feb 23 15:58:32 2016
